--- a/STM32_MODULE.ioc
+++ b/STM32_MODULE.ioc
@@ -11,7 +11,9 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM2
-Mcu.IPNb=4
+Mcu.IP4=TIM3
+Mcu.IP5=TIM4
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
@@ -23,6 +25,8 @@ Mcu.Pin13=PA14
 Mcu.Pin14=PB3
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -31,7 +35,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB11
 Mcu.Pin9=PA8
-Mcu.PinsNb=17
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -47,7 +51,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=LR3
@@ -62,13 +68,13 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=PWM_GREEN
+PA2.GPIO_Label=LG1
 PA2.Locked=true
-PA2.Signal=S_TIM2_CH3
+PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=PWM_RED
+PA3.GPIO_Label=LR1
 PA3.Locked=true
-PA3.Signal=S_TIM2_CH4
+PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LB1
 PA4.Locked=true
@@ -154,18 +160,25 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
-SH.S_TIM2_CH3.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
-SH.S_TIM2_CH4.ConfNb=1
-TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Period,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler
-TIM2.Period=36000-1
+TIM2.IPParameters=Period,Prescaler,TIM_MasterOutputTrigger
+TIM2.Period=50-1
 TIM2.Prescaler=1
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM3.Period=50-1
+TIM3.Prescaler=1
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM4.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM4.Period=50-1
+TIM4.Prescaler=1
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 isbadioc=false
