--- a/STM32_MODULE.ioc
+++ b/STM32_MODULE.ioc
@@ -2,46 +2,68 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=TIM2_UP
+Dma.Request1=TIM3_CH4/UP
+Dma.RequestsNb=2
+Dma.TIM2_UP.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_UP.0.Instance=DMA1_Channel2
+Dma.TIM2_UP.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_UP.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_UP.0.Mode=DMA_CIRCULAR
+Dma.TIM2_UP.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_UP.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_UP.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM2_UP.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM3_CH4/UP.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM3_CH4/UP.1.Instance=DMA1_Channel3
+Dma.TIM3_CH4/UP.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM3_CH4/UP.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH4/UP.1.Mode=DMA_CIRCULAR
+Dma.TIM3_CH4/UP.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM3_CH4/UP.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH4/UP.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH4/UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
-Mcu.Pin8=PB11
-Mcu.Pin9=PA8
-Mcu.PinsNb=19
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -51,18 +73,10 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=LR3
-PA11.Locked=true
-PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=LB3
-PA12.Locked=true
-PA12.Signal=GPIO_Output
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
@@ -80,7 +94,7 @@ PA4.GPIO_Label=LB1
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LG2
+PA5.GPIO_Label=LB2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
@@ -88,17 +102,17 @@ PA6.GPIO_Label=LR2
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LB2
+PA7.GPIO_Label=LG2
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=LED
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=LG3
-PB11.Locked=true
-PB11.Signal=GPIO_Output
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -136,7 +150,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -168,17 +182,13 @@ TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM3.Period=50-1
 TIM3.Prescaler=1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM4.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
-TIM4.Period=50-1
-TIM4.Prescaler=1
-TIM4.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 isbadioc=false
